--- a/FrontTFG/package.json
+++ b/FrontTFG/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@vueuse/core": "^10.9.0",
     "pinia": "^2.1.7",
+    "primeicons": "^7.0.0",
+    "primevue": "^3.52.0",
     "vue": "^3.4.21",
     "vue-debounce": "^5.0.0",
     "vue-router": "^4.3.0",
