--- a/FrontTFG/package.json
+++ b/FrontTFG/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.9.0",
+    "chart.js": "^4.4.3",
     "pinia": "^2.1.7",
     "primeicons": "^7.0.0",
     "primevue": "^3.52.0",
