--- a/FrontTFG/package.json
+++ b/FrontTFG/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@vueuse/core": "^10.9.0",
     "chart.js": "^4.4.3",
+    "file-saver": "^2.0.5",
+    "papaparse": "^5.4.1",
     "pinia": "^2.1.7",
     "primeicons": "^7.0.0",
     "primevue": "^3.52.0",
