Chage some things necessary for aws deployment

--- a/FrontTFG/nginx.conf
+++ b/FrontTFG/nginx.conf
@@ -25,7 +25,7 @@ http {
         }
 
         location /api/ {
-            proxy_pass http://a5f63bca833114e3796db869324aa232-973998828.us-east-1.elb.amazonaws.com;  # Cambia esto por la URL de tu backend
+            proxy_pass https://galactic2api.retocsv.es;  # Cambia esto por la URL de tu backend
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
